(executable
 (name main)
 (public_name e)
 (libraries e)
 (modules main parser lexer))

(library
 (name    e)
 (libraries um-abt)
 (preprocess (pps ppx_deriving.std ppx_sexp_conv))
 (modules e))

(menhir
 (modules parser)
 (flags "--explain"))

(mdx
 (files README.md)
 (deps ill_typed_ex.e well_typed_ex.e))

(ocamllex lexer)
